fixed a bug on scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,9 @@ h2{
 }
 .badge-top{
   position:absolute;
-  top:-10px;
-  right:-50px;
+  z-index:99999;
+  top:0;
+  right:0;
 }
 /*Fonts*/
 .font-light{
